---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2020.11.XX
  Changes:
    - Changed how default indicators for true/false setting descriptions are handled internally
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2020.10.04
  Features:
    - Added function `ore_icon_pictures`
  Changes:
    - Improved robustness of `composite_existiing_icons` function
    - Added ability to direct-insert `icon`/`icons` specifications using `composite_existing_icons`
  Bugfixes:
    - Fixed that the function `composite_existing_icons` produced icons in alt-view that were twice as large as intended
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2020.09.21
  Features:
    - Added function `composite_existing_icons`
    - Added functions `pipe_pictures`, `underground_pipe_pictures` and `pipe_covers`
  Changes:
    - Directories are now handled via the `mod` field of the `inputs` table, instead of the `directory` field
    - Function `create_icons_from_list` can now handle the `mod` field of the `inputs` table
    - Modified `create_icons_from_list` to allow specification of `icon_filename` directly
    - Renamed tier-mapping style "Name" to "Traditional", updated description of the setting "Tier mapping" for clarity.
    - Moved several item icons from Artisanal Reskins: Bob's Mods to this mod
  Bugfixes:
    - Fixed that assigning an icon to a recipe that shared a name with an item would overwrite the item icon
    - Fixed that `construct_icon` and `construct_technology_icon` were not properly porting an icon into an icons definition
  Locale:
    - Updated Czech and German localizations
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020.09.06
  Features: