@@ -3,6 +3,10 @@ Version: 1.0.7
 Date: 2020.11.XX
   Changes:
     - Changed how default indicators for true/false setting descriptions are handled internally
+    - Added handling of custom Types/Animation parameter `vertically_oriented` to `make_4way_animation_from_spritesheet`
+    - Restored 6th tier labels in a temporary state, pending finalization on how pseudo-6th tier entities will be handled
+  Locale:
+    - Updated Czech and German localizations
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 2020.10.04
